# serializer version: 1
# name: test_read_oxdna
  [32 33 30 31 31 31 32 31 31 30 30 31 30 33 33 32 33 31 32 33 31 30 33 31
   30 32 33 32 33 32 33 32 31 32 32 32 30 33 30 31 31 32 32 33 30 30 31 30
   31 33 33 31 31 31 33 31 30 31 32 30 31 32 33 31 32 33 31 31 33 32 31 32
   32 32 33 33 31 30 30 31 33 30 32 32 30 33 33 32 31 30 33 33 32 33 31 31
   33 33 30 30]
# ---
# name: test_read_oxdna.1
  [4 1 4 3 1 1 2 4 3 3 1 3 4 2 3 4 4 1 2 4 3 1 3 3 1 3 3 2 3 4 2 3 1 1 2 3 4
   2 4 4 1 4 2 3 3 3 1 1 4 4 2 1 3 3 2 3 4 2 2 2 1 2 2 1 3 3 3 3 3 3 1 4 1 2
   3 3 1 4 2 1 3 4 1 4 3 4 3 4 4 4 3 3 2 4 1 3 2 2 2 3]
# ---
# name: test_read_oxdna.10
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.11
  AttributeError("The selected attribute 'sharp_face' does not exist on the mesh.")
# ---
# name: test_read_oxdna.12
  [32 32 30 30 31 31 33 31 31 30 33 32 32 33 31 30 33 30 31 31 31 33 31 30
   32 31 32 33 33 32 33 33 32 30 33 31 31 33 30 31 30 31 33 32 32 32 33 30
   31 31 31 32 32 33 33 33 32 30 32 33 31 32 30 31 31 32 33 31 32 33 31 31
   32 31 30 33 30 32 31 32 33 32 31 33 33 30 33 32 33 33 32 30 31 32 32 33
   32 31 31 33]
# ---
# name: test_read_oxdna.13
  [3 4 3 2 1 1 3 1 4 1 3 4 2 2 3 2 3 3 3 1 3 1 2 3 3 3 2 3 3 2 2 1 4 2 4 4 1
   1 3 3 4 1 4 3 4 4 2 4 3 4 2 2 4 2 4 2 4 1 2 1 1 4 4 1 1 2 3 4 4 2 1 3 2 3
   3 3 3 3 3 2 3 4 3 3 4 2 3 2 3 3 4 1 1 4 3 1 2 3 4 3]
# ---
# name: test_read_oxdna.14
  [[0.4 0.8 0.5 0.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.3 0.5 1.0]
   [0.3 0.8 0.2 1.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.2 0.2 1.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.3 0.5 1.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.3 0.8 0.2 1.0]
   [0.3 0.8 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.3 0.5 1.0]
   [0.3 0.8 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.3 0.5 1.0]
   [0.8 0.2 0.2 1.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.3 0.5 1.0]
   [0.3 0.8 0.2 1.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.3 0.5 1.0]
   [0.4 0.8 0.5 0.0]
   [0.3 0.8 0.2 1.0]
   [0.4 0.5 0.8 0.0]
   [0.3 0.8 0.2 1.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.2 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.2 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.2 0.2 1.0]
   [0.8 0.4 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.5 0.8 0.0]
   [0.3 0.8 0.2 1.0]
   [0.3 0.8 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.2 0.2 1.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.3 0.8 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.3 0.5 0.8 1.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.2 0.2 1.0]
   [0.3 0.8 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.2 0.2 1.0]
   [0.3 0.8 0.2 1.0]
   [0.8 0.3 0.5 1.0]
   [0.4 0.5 0.8 0.0]
   [0.3 0.5 0.8 1.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.3 0.5 1.0]
   [0.8 0.2 0.2 1.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.3 0.5 1.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.3 0.8 0.2 1.0]
   [0.8 0.3 0.5 1.0]]
# ---
# name: test_read_oxdna.15
  [[-0.3  0.5  0.1]
   [-0.0  0.8 -0.1]
   [-0.1  0.7  0.1]
   [ 0.1  0.3  0.1]
   [-0.3  0.3  0.6]
   [-0.3  0.4  0.6]
   [-0.1  0.8 -0.3]
   [ 0.1  0.5  0.1]
   [-0.2  0.4  0.3]
   [-0.0  0.3 -0.0]
   [-0.1  0.8 -0.2]
   [-0.1  0.8 -0.0]
   [ 0.0  0.4  0.2]
   [-0.5  0.2  0.1]
   [-0.1  0.7 -0.1]
   [ 0.1  0.3  0.0]
   [-0.1  0.7  0.0]
   [-0.1  0.7  0.1]
   [-0.5  0.2  0.1]
   [-0.2  0.4  0.6]
   [-0.0  0.6 -0.1]
   [-0.1  0.3  0.1]
   [-0.4  0.2  0.1]
   [-0.2  0.3  0.1]
   [-0.2  0.5  0.1]
   [-0.1  0.7 -0.1]
   [ 0.0  0.3  0.1]
   [-0.1  0.9 -0.2]
   [-0.1  0.8 -0.2]
   [-0.1  0.4 -0.0]
   [-0.1  0.4  0.1]
   [-0.1  0.3  0.0]
   [-0.1  0.8 -0.1]
   [ 0.1  0.3  0.1]
   [-0.2  0.4  0.4]
   [-0.1  0.5  0.2]
   [ 0.1  0.5  0.1]
   [-0.1  0.3  0.0]
   [-0.3  0.4 -0.0]
   [-0.4  0.2 -0.0]
   [-0.2  0.6  0.0]
   [-0.2  0.3  0.0]
   [-0.1  0.6 -0.0]
   [-0.1  0.7  0.1]
   [-0.1  0.6  0.1]
   [-0.2  0.4  0.6]
   [-0.0  0.4  0.1]
   [-0.2  0.7 -0.1]
   [-0.1  0.6 -0.1]
   [-0.1  0.5  0.2]
   [ 0.1  0.3  0.1]
   [ 0.2  0.5  0.0]
   [-0.1  0.8 -0.1]
   [-0.5  0.3  0.0]
   [-0.1  0.4  0.5]
   [-0.2  0.3 -0.1]
   [-0.2  0.3  0.5]
   [-0.1  0.4  0.3]
   [ 0.2  0.4  0.0]
   [-0.1  0.3  0.0]
   [-0.1  0.3  0.1]
   [-0.1  0.4  0.6]
   [-0.1  0.6  0.1]
   [ 0.1  0.5  0.0]
   [ 0.2  0.4  0.1]
   [ 0.0  0.3  0.1]
   [-0.1  1.0 -0.2]
   [-0.1  0.6  0.2]
   [-0.2  0.8 -0.1]
   [-0.3  0.2  0.1]
   [ 0.2  0.5  0.1]
   [-0.5  0.2  0.0]
   [-0.1  0.3  0.0]
   [-0.1  0.7 -0.2]
   [-0.2  0.3  0.0]
   [-0.3  0.3  0.0]
   [-0.1  0.7  0.1]
   [-0.2  0.5  0.1]
   [-0.2  0.5  0.1]
   [ 0.2  0.4  0.1]
   [-0.3  0.4  0.1]
   [-0.2  0.4  0.5]
   [-0.5  0.2  0.1]
   [-0.1  0.8 -0.2]
   [-0.2  0.6 -0.0]
   [-0.4  0.2  0.1]
   [-0.2  0.6  0.2]
   [ 0.2  0.3  0.0]
   [-0.0  0.6 -0.0]
   [-0.1  0.6  0.1]
   [-0.1  0.7 -0.1]
   [-0.1  0.3 -0.0]
   [-0.1  0.3  0.1]
   [-0.1  0.6  0.1]
   [-0.2  0.5  0.2]
   [-0.1  0.3  0.1]
   [ 0.2  0.4 -0.0]
   [-0.2  0.6  0.2]
   [-0.1  0.5  0.2]
   [-0.1  0.6  0.1]]
# ---
# name: test_read_oxdna.16
  [[ 6.8e-02  5.6e-02  4.6e-02]
   [-3.6e-02 -5.9e-02 -7.2e-02]
   [-1.6e-02 -6.4e-02 -7.5e-02]
   [-4.0e-02  9.0e-02 -1.8e-02]
   [ 6.2e-02  7.8e-02 -1.8e-03]
   [ 9.7e-02  2.5e-02  1.3e-03]
   [ 4.1e-02  3.0e-02 -8.6e-02]
   [ 3.6e-02 -8.4e-02 -4.1e-02]
   [ 9.8e-02 -1.9e-02 -7.1e-03]
   [-1.8e-02  7.2e-02  6.7e-02]
   [ 9.2e-02 -4.8e-03  3.9e-02]
   [ 7.1e-02 -6.9e-02 -1.6e-02]
   [-5.8e-03  2.3e-02 -9.7e-02]
   [ 2.8e-02 -9.1e-02 -2.9e-02]
   [-2.6e-03  8.7e-02  5.0e-02]
   [-4.0e-02  9.0e-02 -1.8e-02]
   [-9.2e-02  1.1e-02 -3.9e-02]
   [-1.6e-02 -6.4e-02 -7.5e-02]
   [-1.6e-02  4.5e-02 -8.8e-02]
   [ 6.2e-02  7.8e-02 -1.8e-03]
   [-7.8e-02  6.2e-02  1.2e-03]
   [-1.8e-02  9.8e-02 -6.2e-03]
   [-3.9e-06 -3.2e-02 -9.5e-02]
   [ 6.5e-03 -1.5e-02 -9.9e-02]
   [ 9.3e-02  2.8e-02  2.5e-02]
   [-2.6e-03  8.7e-02  5.0e-02]
   [-5.8e-03  2.3e-02 -9.7e-02]
   [ 4.7e-02 -8.8e-02  2.6e-04]
   [ 9.2e-02 -4.8e-03  3.9e-02]
   [ 2.7e-02 -8.4e-02  4.8e-02]
   [ 1.2e-02 -7.5e-02 -6.5e-02]
   [-1.8e-02  9.8e-02 -6.2e-03]
   [ 2.5e-02 -8.0e-02 -5.5e-02]
   [-4.0e-02  9.0e-02 -1.8e-02]
   [ 5.7e-02  7.9e-02  2.2e-02]
   [-8.2e-02 -4.1e-02 -4.0e-02]
   [ 3.6e-02 -8.4e-02 -4.1e-02]
   [-1.8e-02  9.8e-02 -6.2e-03]
   [ 2.0e-02 -7.6e-02  6.1e-02]
   [-1.9e-02  7.0e-02  6.9e-02]
   [-1.4e-02  7.5e-02  6.4e-02]
   [-1.8e-02  2.0e-02 -9.6e-02]
   [ 3.8e-02  6.0e-02  7.0e-02]
   [-6.4e-02 -3.7e-02 -6.7e-02]
   [-9.6e-02  1.0e-02  2.7e-02]
   [-6.7e-02 -7.4e-02 -4.0e-03]
   [ 9.2e-03 -2.2e-02 -9.7e-02]
   [ 8.6e-02 -2.1e-02  4.6e-02]
   [-7.8e-02  6.2e-02  1.2e-03]
   [-8.2e-02 -4.1e-02 -4.0e-02]
   [-2.5e-02  7.0e-02 -6.7e-02]
   [-8.5e-03  5.9e-03  9.9e-02]
   [-3.6e-02 -5.9e-02 -7.2e-02]
   [ 2.8e-02 -9.1e-02 -2.9e-02]
   [-7.7e-02  6.2e-02  1.3e-02]
   [-8.2e-03  1.4e-02  9.9e-02]
   [-9.4e-02  3.3e-02 -5.0e-03]
   [-8.0e-02  6.0e-02  1.5e-03]
   [-3.9e-02  5.4e-02  7.5e-02]
   [-1.8e-02  9.8e-02 -6.2e-03]
   [-1.8e-02  2.0e-02 -9.6e-02]
   [-9.5e-02 -3.1e-02 -3.3e-03]
   [-7.7e-02  3.4e-02  5.5e-02]
   [ 4.2e-02 -3.8e-02 -8.3e-02]
   [ 1.0e-02  8.4e-03 -9.9e-02]
   [-5.8e-03  2.3e-02 -9.7e-02]
   [-1.8e-02 -6.7e-02  7.2e-02]
   [-8.2e-02 -4.1e-02 -4.0e-02]
   [ 7.1e-02 -6.9e-02 -1.6e-02]
   [-1.3e-02  8.1e-02 -5.7e-02]
   [ 1.0e-02  8.4e-03 -9.9e-02]
   [-1.6e-02  4.5e-02 -8.8e-02]
   [-5.0e-03 -3.3e-02  9.4e-02]
   [ 4.1e-02  6.7e-02  6.2e-02]
   [ 6.5e-03 -1.5e-02 -9.9e-02]
   [ 2.2e-02 -9.7e-02  4.7e-04]
   [-1.6e-02 -6.4e-02 -7.5e-02]
   [ 9.3e-02  2.8e-02  2.5e-02]
   [ 9.6e-02 -6.6e-03 -2.6e-02]
   [-3.9e-02  5.4e-02  7.5e-02]
   [ 2.2e-02 -9.7e-02  4.7e-04]
   [-7.7e-03  9.9e-02  1.4e-02]
   [-2.5e-02  9.2e-02 -3.0e-02]
   [ 4.1e-02  3.0e-02 -8.6e-02]
   [ 3.8e-02  6.0e-02  7.0e-02]
   [-1.9e-02  2.6e-02 -9.4e-02]
   [ 7.9e-02 -4.1e-02 -4.6e-02]
   [-4.5e-02  7.9e-02  4.0e-02]
   [-9.2e-02  1.1e-02 -3.9e-02]
   [ 1.8e-02 -5.2e-02 -8.3e-02]
   [ 7.1e-02 -6.9e-02 -1.6e-02]
   [-1.8e-02  7.2e-02  6.7e-02]
   [-2.8e-02  8.0e-02 -5.4e-02]
   [-9.6e-02  1.0e-02  2.7e-02]
   [ 6.8e-02  5.6e-02  4.6e-02]
   [-1.8e-02  9.8e-02 -6.2e-03]
   [-8.5e-03  5.9e-03  9.9e-02]
   [ 9.6e-02 -6.6e-03 -2.6e-02]
   [-9.8e-02 -1.9e-02 -9.5e-03]
   [ 1.8e-02 -5.2e-02 -8.3e-02]]
# ---
# name: test_read_oxdna.17
  [[-0.0  0.1 -0.1]
   [-0.1 -0.0  0.1]
   [ 0.1  0.1 -0.1]
   [-0.1 -0.0  0.0]
   [-0.0 -0.0 -0.1]
   [-0.0  0.0 -0.1]
   [ 0.0  0.1  0.0]
   [ 0.1  0.0  0.0]
   [-0.0 -0.0  0.1]
   [ 0.1  0.0 -0.0]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.1  0.0]
   [-0.1 -0.0  0.0]
   [-0.1 -0.0 -0.0]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.0  0.0]
   [ 0.0  0.1 -0.1]
   [ 0.1  0.1 -0.1]
   [ 0.1  0.0 -0.0]
   [-0.0 -0.0 -0.1]
   [ 0.0  0.0 -0.1]
   [ 0.1  0.0 -0.0]
   [-0.1 -0.0  0.0]
   [ 0.1  0.0  0.0]
   [-0.0  0.1 -0.1]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.0  0.0]
   [ 0.1  0.0  0.1]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.0 -0.0]
   [-0.1 -0.0 -0.0]
   [ 0.1  0.0 -0.0]
   [-0.1 -0.1  0.0]
   [-0.1 -0.0  0.0]
   [ 0.0 -0.0  0.1]
   [-0.0 -0.0  0.1]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0 -0.0]
   [-0.0 -0.1  0.1]
   [ 0.1  0.0 -0.0]
   [-0.0 -0.1  0.1]
   [ 0.1  0.0 -0.1]
   [ 0.0 -0.1  0.1]
   [-0.0  0.0  0.1]
   [-0.1 -0.0 -0.0]
   [-0.0 -0.1  0.1]
   [ 0.0  0.0 -0.1]
   [-0.0 -0.0  0.1]
   [-0.1 -0.0  0.0]
   [-0.1 -0.0 -0.0]
   [-0.1 -0.0  0.1]
   [-0.1 -0.0 -0.0]
   [ 0.0 -0.0  0.1]
   [-0.1 -0.1  0.0]
   [ 0.0  0.0  0.1]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.1  0.0]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0 -0.0]
   [-0.0  0.0  0.1]
   [ 0.0 -0.1  0.1]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0  0.0]
   [-0.1 -0.0  0.0]
   [ 0.1  0.1  0.1]
   [-0.0 -0.0  0.1]
   [-0.1 -0.1  0.0]
   [-0.1  0.0  0.0]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0 -0.0]
   [-0.1 -0.1 -0.0]
   [ 0.0  0.1 -0.1]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0  0.0]
   [ 0.1  0.1 -0.1]
   [-0.0  0.1 -0.1]
   [-0.0  0.1 -0.1]
   [-0.1 -0.1  0.0]
   [ 0.1  0.0  0.0]
   [ 0.0 -0.0  0.1]
   [ 0.1  0.0 -0.0]
   [ 0.0  0.1  0.0]
   [-0.0 -0.1  0.1]
   [-0.1  0.0  0.0]
   [ 0.0  0.1 -0.1]
   [-0.1 -0.1  0.0]
   [ 0.0  0.1 -0.1]
   [ 0.0  0.1 -0.0]
   [-0.1 -0.1  0.0]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0 -0.0]
   [ 0.0 -0.1  0.1]
   [-0.0  0.1 -0.1]
   [ 0.1  0.0 -0.0]
   [-0.1 -0.0 -0.0]
   [-0.0  0.1 -0.1]
   [ 0.0 -0.1  0.1]
   [ 0.0  0.1 -0.0]]
# ---
# name: test_read_oxdna.18
  [[-1.0e-02  6.0e-02  4.2e-03]
   [ 2.0e-03  1.5e-02  6.5e-02]
   [ 2.2e-02  1.9e-02  6.3e-03]
   [ 5.5e-02 -3.0e-02 -2.1e-02]
   [-1.0e-02  2.1e-02  1.1e-02]
   [ 2.1e-02  3.4e-02  8.3e-03]
   [-2.0e-02  1.3e-02  3.4e-02]
   [ 8.2e-03  4.7e-03 -4.0e-02]
   [ 1.9e-04  2.8e-02  3.6e-02]
   [-1.5e-02  2.1e-02  2.7e-02]
   [-1.6e-02 -5.1e-03  1.2e-02]
   [ 2.4e-02 -2.8e-02  3.3e-04]
   [-1.3e-02  8.6e-03  2.8e-02]
   [-5.4e-04  4.0e-02 -1.4e-02]
   [ 8.4e-03 -1.5e-02 -2.7e-02]
   [ 5.5e-02 -3.0e-02 -2.1e-02]
   [ 1.0e-02  1.1e-02 -1.5e-02]
   [ 2.2e-02  1.9e-02  6.3e-03]
   [ 1.4e-02  3.0e-02 -3.1e-02]
   [-1.0e-02  2.1e-02  1.1e-02]
   [-1.5e-02  3.7e-02  1.0e-02]
   [ 1.4e-02  4.2e-02  2.6e-02]
   [ 2.2e-02  1.5e-02  1.4e-02]
   [-4.7e-03 -9.1e-03 -3.0e-02]
   [ 2.9e-02  9.3e-04  1.7e-02]
   [ 8.4e-03 -1.5e-02 -2.7e-02]
   [-1.3e-02  8.6e-03  2.8e-02]
   [ 3.8e-02  2.9e-02 -1.4e-02]
   [-1.6e-02 -5.1e-03  1.2e-02]
   [-1.8e-03 -3.2e-02  3.8e-03]
   [ 2.9e-02  5.6e-03  1.3e-03]
   [ 1.4e-02  4.2e-02  2.6e-02]
   [-3.2e-02  3.3e-02 -2.0e-02]
   [ 5.5e-02 -3.0e-02 -2.1e-02]
   [ 3.0e-03  2.6e-02  2.3e-02]
   [-1.2e-02  3.3e-03  1.9e-03]
   [ 8.2e-03  4.7e-03 -4.0e-02]
   [ 1.4e-02  4.2e-02  2.6e-02]
   [-2.4e-02 -2.9e-02 -1.2e-02]
   [-1.7e-02  4.3e-03 -7.8e-02]
   [ 3.8e-02  2.7e-02  1.1e-01]
   [-4.8e-02  6.6e-02 -1.7e-02]
   [-2.8e-02 -6.7e-02  1.9e-03]
   [-4.9e-03  1.8e-02  4.4e-05]
   [ 1.3e-02 -1.7e-02 -1.8e-02]
   [ 9.5e-03  1.7e-02  1.3e-02]
   [ 9.9e-03  2.4e-02  1.7e-02]
   [-7.7e-03  4.0e-02  5.0e-04]
   [-1.5e-02  3.7e-02  1.0e-02]
   [-1.2e-02  3.3e-03  1.9e-03]
   [-3.1e-02 -7.3e-03 -2.0e-02]
   [-5.6e-02  4.8e-02  4.7e-02]
   [ 2.0e-03  1.5e-02  6.5e-02]
   [-5.4e-04  4.0e-02 -1.4e-02]
   [-1.9e-03 -9.6e-04 -1.0e-02]
   [ 3.2e-04  1.1e-02 -3.1e-02]
   [-3.6e-02 -3.1e-03  5.8e-03]
   [-2.5e-04 -2.2e-02  3.5e-02]
   [ 4.6e-03 -1.7e-02  1.3e-02]
   [ 1.4e-02  4.2e-02  2.6e-02]
   [-4.8e-02  6.6e-02 -1.7e-02]
   [ 1.8e-02 -8.6e-03 -5.4e-02]
   [ 3.1e-02  2.5e-02  1.7e-02]
   [-4.4e-02 -3.5e-02 -5.4e-02]
   [ 6.2e-02  4.2e-03  2.4e-02]
   [-1.3e-02  8.6e-03  2.8e-02]
   [ 1.6e-02 -7.0e-03  2.8e-02]
   [-1.2e-02  3.3e-03  1.9e-03]
   [ 2.4e-02 -2.8e-02  3.3e-04]
   [-3.3e-03 -5.2e-02  6.3e-03]
   [ 6.2e-02  4.2e-03  2.4e-02]
   [ 1.4e-02  3.0e-02 -3.1e-02]
   [ 1.7e-02  3.8e-02 -1.2e-03]
   [ 1.4e-02  3.6e-02 -1.2e-02]
   [-4.7e-03 -9.1e-03 -3.0e-02]
   [ 4.1e-03 -1.6e-02 -4.5e-02]
   [ 2.2e-02  1.9e-02  6.3e-03]
   [ 2.9e-02  9.3e-04  1.7e-02]
   [ 7.9e-04  2.7e-02  2.7e-02]
   [ 4.6e-03 -1.7e-02  1.3e-02]
   [ 4.1e-03 -1.6e-02 -4.5e-02]
   [ 2.0e-02 -5.2e-02  1.8e-02]
   [ 5.0e-02 -2.7e-02 -2.0e-02]
   [-2.0e-02  1.3e-02  3.4e-02]
   [-2.8e-02 -6.7e-02  1.9e-03]
   [-2.3e-02 -3.0e-02  5.5e-03]
   [ 1.9e-02  5.0e-02 -3.5e-02]
   [ 2.7e-03 -1.4e-02 -1.1e-03]
   [ 1.0e-02  1.1e-02 -1.5e-02]
   [ 7.1e-03  6.9e-02 -4.1e-02]
   [ 2.4e-02 -2.8e-02  3.3e-04]
   [-1.5e-02  2.1e-02  2.7e-02]
   [-1.4e-03  1.2e-02 -4.1e-02]
   [ 1.3e-02 -1.7e-02 -1.8e-02]
   [-1.0e-02  6.0e-02  4.2e-03]
   [ 1.4e-02  4.2e-02  2.6e-02]
   [-5.6e-02  4.8e-02  4.7e-02]
   [ 7.9e-04  2.7e-02  2.7e-02]
   [ 1.9e-03  9.0e-03  3.5e-02]
   [ 7.1e-03  6.9e-02 -4.1e-02]]
# ---
# name: test_read_oxdna.19
  [[ 0.1 -0.1 -0.1]
   [ 0.2  0.0  0.1]
   [ 0.5 -0.0 -0.2]
   [ 0.0 -0.6  0.4]
   [ 0.0  0.3  0.2]
   [-0.7 -0.0  0.0]
   [-0.3  0.0  0.5]
   [ 0.3  0.1  0.6]
   [ 0.2  0.5  0.4]
   [ 0.1 -0.2  0.6]
   [-0.3  0.5  0.1]
   [ 0.3  0.1 -0.1]
   [ 0.0  0.0  0.2]
   [-0.0 -0.3 -0.1]
   [-0.6  0.1 -0.6]
   [ 0.0 -0.6  0.4]
   [ 0.1  0.5 -0.0]
   [ 0.5 -0.0 -0.2]
   [ 0.5  0.1  0.1]
   [ 0.0  0.3  0.2]
   [ 0.1 -0.3  0.0]
   [-0.1  0.1  0.4]
   [ 0.2 -0.1  0.4]
   [ 0.7 -0.1  0.5]
   [-0.3 -0.0 -0.3]
   [-0.6  0.1 -0.6]
   [ 0.0  0.0  0.2]
   [-0.2 -0.1 -0.2]
   [-0.3  0.5  0.1]
   [ 0.1  0.1  0.2]
   [ 0.3  0.3  0.5]
   [-0.1  0.1  0.4]
   [-0.1 -0.1  0.3]
   [ 0.0 -0.6  0.4]
   [-0.0 -0.2  0.1]
   [-0.2 -0.1  0.0]
   [ 0.3  0.1  0.6]
   [-0.1  0.1  0.4]
   [-0.3  0.7  0.1]
   [-0.2 -0.1 -0.5]
   [-0.0 -0.5  0.5]
   [-0.5  0.0  0.1]
   [ 0.7 -0.4  0.4]
   [-0.6  0.1 -0.1]
   [ 0.0  0.3 -0.6]
   [ 0.0  0.3  0.0]
   [ 0.1  0.2  0.7]
   [ 0.1 -0.1 -0.2]
   [ 0.1 -0.3  0.0]
   [-0.2 -0.1  0.0]
   [-0.3 -0.4  0.2]
   [-0.3 -0.1 -0.1]
   [ 0.2  0.0  0.1]
   [-0.0 -0.3 -0.1]
   [-0.1  0.0  0.2]
   [ 0.1  0.4 -0.4]
   [-0.3 -0.3 -0.2]
   [ 0.2  0.2  0.3]
   [ 0.0  0.5 -0.1]
   [-0.1  0.1  0.4]
   [-0.5  0.0  0.1]
   [ 0.3  0.2  0.2]
   [ 0.1 -0.2  0.0]
   [ 0.0 -0.0  0.7]
   [ 0.1  0.8 -0.3]
   [ 0.0  0.0  0.2]
   [-0.3 -0.4 -0.3]
   [-0.2 -0.1  0.0]
   [ 0.3  0.1 -0.1]
   [ 0.3 -0.0 -0.3]
   [ 0.1  0.8 -0.3]
   [ 0.5  0.1  0.1]
   [ 0.0  0.2  0.4]
   [ 0.2 -0.3  0.5]
   [ 0.7 -0.1  0.5]
   [ 0.1 -0.5  0.2]
   [ 0.5 -0.0 -0.2]
   [-0.3 -0.0 -0.3]
   [-0.3  0.6  0.5]
   [ 0.0  0.5 -0.1]
   [ 0.1 -0.5  0.2]
   [ 0.4  0.3 -0.4]
   [ 0.2 -0.2  0.0]
   [-0.3  0.0  0.5]
   [ 0.7 -0.4  0.4]
   [-0.2 -0.4  0.1]
   [-0.1 -0.5 -0.0]
   [ 0.3 -0.4  0.2]
   [ 0.1  0.5 -0.0]
   [ 0.3 -0.2  0.0]
   [ 0.3  0.1 -0.1]
   [ 0.1 -0.2  0.6]
   [-0.1  0.5  0.4]
   [ 0.0  0.3 -0.6]
   [ 0.1 -0.1 -0.1]
   [-0.1  0.1  0.4]
   [-0.3 -0.1 -0.1]
   [-0.3  0.6  0.5]
   [-0.1  0.4  0.3]
   [ 0.3 -0.2  0.0]]
# ---
# name: test_read_oxdna.2
  [[0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.7 0.8 0.4 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.5 0.8 0.0]
   [0.4 0.8 0.5 0.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.5 0.8 0.0]
   [0.8 0.4 0.4 0.0]
   [0.4 0.8 0.5 0.0]
   [0.7 0.8 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.7 0.8 0.4 0.0]
   [0.4 0.8 0.5 0.0]]
# ---
# name: test_read_oxdna.20
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.21
  [[1985 1986]
   [1386 1387]
   [2062 2066]
   [ 189  195]
   [1142 1146]
   [1902 1903]
   [ 507  508]
   [  24   25]
   [   6   12]
   [ 374  380]
   [1630 1631]
   [1422 1423]
   [1102 1106]
   [1895 1892]
   [1825 1826]
   [ 836  840]
   [ 692  693]
   [1922 1923]
   [  34   40]
   [ 552  553]
   [1154 1155]
   [2008 2009]
   [ 373  374]
   [1813 1814]
   [ 951  948]
   [1288 1289]
   [1292 1293]
   [1681 1682]
   [ 133  134]
   [ 352  353]
   [1359 1356]
   [1331 1328]
   [1729 1730]
   [2017 2018]
   [1809 1810]
   [ 523  524]
   [1631 1628]
   [2014 2015]
   [1486 1487]
   [1692 1693]
   [ 244  250]
   [2126 2127]
   [ 979  976]
   [ 734  738]
   [ 245  251]
   [ 807  811]
   [2005 2006]
   [ 939  936]
   [2016 2017]
   [ 461  456]
   [1035 1032]
   [ 132  133]
   [1882 1883]
   [ 369  370]
   [1734 1735]
   [1552 1553]
   [1994 1995]
   [ 612  616]
   [ 147  148]
   [  61   62]
   [1426 1427]
   [ 384  385]
   [2079 2083]
   [1608 1609]
   [ 804  805]
   [1149 1150]
   [2094 2095]
   [ 355  356]
   [1224 1225]
   [1390 1394]
   [1580 1581]
   [1726 1727]
   [2019 2016]
   [1195 1192]
   [  71   77]
   [1550 1551]
   [ 804  808]
   [ 485  491]
   [1460 1464]
   [ 992  993]
   [ 650  651]
   [ 795  792]
   [1429 1430]
   [ 237  238]
   [ 161  167]
   [1184 1185]
   [1671 1675]
   [1255 1252]
   [ 377  372]
   [ 226  227]
   [1479 1483]
   [ 533  528]
   [ 671  675]
   [1781 1785]
   [ 365  360]
   [ 855  859]
   [1141 1142]
   [ 564  570]
   [ 373  379]
   [1450 1451]]
# ---
# name: test_read_oxdna.22
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.23
  [ True  True  True False  True  True False False False False  True  True
    True  True  True  True  True  True False False  True  True False  True
    True  True  True  True False False  True  True  True  True  True False
    True  True  True False  True  True  True False  True  True  True False
    True  True False  True  True  True  True False False  True False  True
    True  True  True  True False  True  True  True  True  True  True False
    True  True False  True  True  True  True  True False False  True  True
    True False False  True False  True  True False  True  True False False
    True False  True  True]
# ---
# name: test_read_oxdna.3
  [[-0.2  0.5  0.6]
   [-0.1  0.3  0.0]
   [-0.1  0.6  0.0]
   [-0.6  0.2  0.1]
   [-0.1  0.4  0.4]
   [-0.3  0.3  0.6]
   [ 0.2  0.3  0.1]
   [-0.2  0.6 -0.1]
   [-0.0  0.6 -0.1]
   [-0.2  0.3  0.1]
   [-0.3  0.5  0.5]
   [-0.5  0.1  0.1]
   [-0.1  0.6  0.1]
   [-0.2  0.3 -0.1]
   [-0.1  0.8 -0.3]
   [-0.3  0.3  0.3]
   [-0.2  0.3  0.4]
   [ 0.0  0.4 -0.0]
   [-0.2  0.3 -0.1]
   [-0.1  0.4  0.5]
   [-0.6  0.1  0.1]
   [-0.0  0.4 -0.1]
   [-0.1  0.8 -0.3]
   [-0.3  0.6  0.2]
   [-0.0  0.4 -0.0]
   [-0.0  0.6  0.1]
   [-0.1  0.8 -0.2]
   [-0.6  0.2 -0.0]
   [-0.1  1.0 -0.2]
   [-0.1  0.4  0.5]
   [-0.2  0.3 -0.0]
   [-0.4  0.3 -0.0]
   [-0.0  0.4 -0.0]
   [-0.1  0.4  0.3]
   [-0.2  0.2  0.0]
   [-0.0  0.7  0.1]
   [-0.1  0.6  0.1]
   [-0.2  0.3 -0.1]
   [-0.2  0.6  0.2]
   [-0.1  0.6  0.2]
   [-0.2  0.5  0.5]
   [-0.2  0.3  0.5]
   [-0.5  0.3 -0.0]
   [-0.1  0.9 -0.3]
   [-0.3  0.4 -0.0]
   [-0.1  0.7  0.1]
   [ 0.1  0.5  0.2]
   [-0.0  0.4 -0.1]
   [-0.1  0.6  0.2]
   [-0.3  0.5  0.3]
   [-0.2  0.3 -0.1]
   [ 0.1  0.5  0.1]
   [-0.5  0.1  0.1]
   [-0.3  0.3  0.1]
   [-0.2  0.3 -0.0]
   [-0.1  0.6 -0.1]
   [-0.1  0.6 -0.0]
   [-0.4  0.3  0.1]
   [ 0.2  0.4  0.0]
   [-0.3  0.2  0.1]
   [-0.3  0.4  0.5]
   [-0.1  0.3 -0.1]
   [-0.0  0.4  0.1]
   [-0.3  0.5  0.6]
   [-0.2  0.5  0.2]
   [-0.3  0.4  0.1]
   [-0.1  0.6 -0.1]
   [-0.1  0.7 -0.1]
   [-0.1  0.8 -0.2]
   [-0.4  0.3 -0.0]
   [ 0.2  0.4  0.2]
   [-0.1  0.4  0.5]
   [-0.2  0.4  0.2]
   [-0.2  0.4 -0.0]
   [-0.1  0.8 -0.3]
   [-0.1  0.8 -0.2]
   [-0.0  0.4 -0.0]
   [-0.1  0.6  0.1]
   [-0.3  0.3  0.1]
   [ 0.1  0.4  0.1]
   [-0.2  0.9 -0.2]
   [-0.1  0.6  0.1]
   [-0.1  0.4  0.3]
   [-0.1  0.9 -0.0]
   [-0.4  0.4  0.0]
   [-0.1  0.3  0.5]
   [-0.1  1.0 -0.3]
   [-0.2  0.3  0.4]
   [-0.2  0.5  0.3]
   [-0.1  0.6  0.1]
   [-0.2  0.8 -0.2]
   [-0.2  0.8 -0.4]
   [-0.1  0.3 -0.0]
   [-0.3  0.5  0.3]
   [-0.1  0.4  0.4]
   [-0.6  0.1  0.1]
   [-0.3  0.2  0.1]
   [-0.5  0.3  0.1]
   [ 0.1  0.3  0.1]
   [-0.1  0.7  0.1]]
# ---
# name: test_read_oxdna.4
  [[-6.7e-02 -7.4e-02 -4.0e-03]
   [-1.8e-02  9.8e-02 -6.2e-03]
   [-1.4e-02  7.5e-02  6.4e-02]
   [-1.3e-04  2.0e-03 -1.0e-01]
   [-9.0e-02 -3.5e-02 -2.7e-02]
   [ 6.2e-02  7.8e-02 -1.8e-03]
   [-4.5e-02  7.9e-02  4.0e-02]
   [ 7.7e-02  2.4e-02  6.0e-02]
   [-7.8e-02  6.2e-02  1.2e-03]
   [ 6.5e-03 -1.5e-02 -9.9e-02]
   [ 6.2e-02 -7.7e-02 -1.2e-02]
   [-2.5e-02  9.2e-02 -3.0e-02]
   [-7.7e-02  3.4e-02  5.5e-02]
   [-8.2e-03  1.4e-02  9.9e-02]
   [ 5.9e-03  1.0e-01  6.9e-04]
   [ 9.1e-02  3.5e-02  2.1e-02]
   [ 5.7e-02  7.9e-02  2.2e-02]
   [ 1.2e-02 -2.3e-02  9.7e-02]
   [-5.0e-03 -3.3e-02  9.4e-02]
   [-7.7e-02  6.2e-02  1.3e-02]
   [-1.6e-02  4.5e-02 -8.8e-02]
   [-4.2e-03  3.5e-02  9.4e-02]
   [-5.3e-02  7.7e-02  3.6e-02]
   [ 9.6e-02 -6.6e-03 -2.6e-02]
   [-4.2e-03  3.5e-02  9.4e-02]
   [-6.4e-02 -3.7e-02 -6.7e-02]
   [ 4.1e-02  3.0e-02 -8.6e-02]
   [ 2.9e-02 -6.1e-02  7.3e-02]
   [ 4.7e-02 -8.8e-02  2.6e-04]
   [-9.4e-02  3.3e-02 -5.0e-03]
   [-8.2e-03  1.4e-02  9.9e-02]
   [ 1.5e-02  9.5e-03  9.8e-02]
   [ 1.2e-02 -2.3e-02  9.7e-02]
   [-9.8e-02  1.6e-02 -1.2e-02]
   [-2.3e-02  7.4e-02  6.4e-02]
   [-6.4e-02 -3.7e-02 -6.7e-02]
   [-7.7e-02  3.4e-02  5.5e-02]
   [-8.2e-03  1.4e-02  9.9e-02]
   [-3.0e-02 -8.4e-02 -4.5e-02]
   [-9.8e-02 -1.9e-02 -9.5e-03]
   [ 2.6e-02 -9.6e-02 -4.9e-03]
   [-7.7e-03  9.9e-02  1.4e-02]
   [ 2.4e-02 -9.2e-02  3.2e-02]
   [-6.7e-02  2.3e-03  7.4e-02]
   [ 2.0e-02 -7.6e-02  6.1e-02]
   [-1.6e-02 -6.4e-02 -7.5e-02]
   [ 4.2e-02 -3.8e-02 -8.3e-02]
   [-4.2e-03  3.5e-02  9.4e-02]
   [-9.8e-02 -1.9e-02 -9.5e-03]
   [ 7.9e-02 -6.1e-02 -8.3e-03]
   [-8.2e-03  1.4e-02  9.9e-02]
   [ 3.6e-02 -8.4e-02 -4.1e-02]
   [-1.6e-02  4.5e-02 -8.8e-02]
   [ 2.9e-02 -6.0e-02 -7.4e-02]
   [-8.2e-03  1.4e-02  9.9e-02]
   [-2.6e-03  8.7e-02  5.0e-02]
   [-1.4e-02  7.5e-02  6.4e-02]
   [-3.9e-06 -3.2e-02 -9.5e-02]
   [-3.9e-02  5.4e-02  7.5e-02]
   [-1.8e-02  9.8e-02  7.5e-04]
   [ 9.3e-02 -3.5e-02 -9.2e-03]
   [-5.0e-03 -3.3e-02  9.4e-02]
   [ 9.2e-03 -2.2e-02 -9.7e-02]
   [ 9.3e-02 -3.5e-02 -9.2e-03]
   [ 9.3e-02  2.8e-02  2.5e-02]
   [ 2.2e-02 -9.7e-02  4.7e-04]
   [-7.8e-02  6.2e-02  1.2e-03]
   [-2.6e-03  8.7e-02  5.0e-02]
   [ 9.2e-02 -4.8e-03  3.9e-02]
   [ 1.5e-02  9.5e-03  9.8e-02]
   [ 1.0e-02  8.4e-03 -9.9e-02]
   [-9.4e-02  3.3e-02 -5.0e-03]
   [-1.9e-02  9.5e-02  2.5e-02]
   [ 2.7e-02 -8.4e-02  4.8e-02]
   [-5.3e-02  7.7e-02  3.6e-02]
   [ 6.3e-02 -7.8e-02 -2.8e-03]
   [ 1.2e-02 -2.3e-02  9.7e-02]
   [-7.7e-02  3.4e-02  5.5e-02]
   [-1.9e-02  2.6e-02 -9.4e-02]
   [ 4.2e-02 -3.8e-02 -8.3e-02]
   [ 5.3e-02  8.1e-02  2.4e-02]
   [-7.7e-02  3.4e-02  5.5e-02]
   [-9.8e-02  1.6e-02 -1.2e-02]
   [-3.6e-02 -5.9e-02 -7.2e-02]
   [ 2.0e-02 -7.6e-02  6.1e-02]
   [-7.7e-02  6.2e-02  1.3e-02]
   [-1.8e-02 -6.7e-02  7.2e-02]
   [-7.7e-03  9.9e-02  1.4e-02]
   [ 3.0e-02 -9.0e-02 -3.1e-02]
   [-7.7e-02  3.4e-02  5.5e-02]
   [ 9.2e-02 -4.8e-03  3.9e-02]
   [ 5.9e-03  1.0e-01  6.9e-04]
   [-5.0e-03 -3.3e-02  9.4e-02]
   [ 7.9e-02 -6.1e-02 -8.3e-03]
   [-9.0e-02 -3.5e-02 -2.7e-02]
   [-1.3e-04  2.0e-03 -1.0e-01]
   [-1.3e-02  8.1e-02 -5.7e-02]
   [ 2.8e-02 -9.1e-02 -2.9e-02]
   [-4.0e-02  9.0e-02 -1.8e-02]
   [-1.6e-02 -6.4e-02 -7.5e-02]]
# ---
# name: test_read_oxdna.5
  [[-0.0  0.0  0.1]
   [ 0.1  0.0 -0.0]
   [-0.0 -0.1  0.1]
   [ 0.1  0.0  0.0]
   [ 0.0  0.0 -0.1]
   [-0.0 -0.0 -0.1]
   [-0.1 -0.1  0.0]
   [-0.0 -0.1  0.1]
   [ 0.0  0.0 -0.1]
   [ 0.1  0.0  0.0]
   [ 0.0  0.0 -0.1]
   [ 0.1  0.0 -0.0]
   [ 0.0 -0.1  0.1]
   [-0.1 -0.1  0.0]
   [ 0.1 -0.0  0.1]
   [-0.0 -0.0  0.1]
   [ 0.0 -0.0  0.1]
   [ 0.1  0.0 -0.0]
   [-0.1 -0.1 -0.0]
   [ 0.0 -0.0  0.1]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0  0.1]
   [-0.0  0.1 -0.1]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0 -0.1]
   [ 0.0  0.1  0.0]
   [-0.1 -0.0 -0.0]
   [ 0.1  0.0  0.1]
   [ 0.0  0.0  0.1]
   [-0.1 -0.1  0.0]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0 -0.0]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.0  0.0]
   [ 0.1  0.0 -0.1]
   [ 0.0 -0.1  0.1]
   [-0.1 -0.1  0.0]
   [-0.0 -0.0  0.1]
   [ 0.0 -0.1  0.1]
   [ 0.0  0.0 -0.1]
   [ 0.0 -0.0  0.1]
   [-0.1 -0.0 -0.0]
   [ 0.1  0.0  0.1]
   [ 0.1  0.0  0.0]
   [ 0.1  0.1 -0.1]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0 -0.0]
   [ 0.0 -0.1  0.1]
   [-0.0 -0.0  0.1]
   [-0.1 -0.1  0.0]
   [ 0.1  0.0  0.0]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0  0.0]
   [-0.1 -0.1  0.0]
   [ 0.0  0.0 -0.1]
   [-0.0 -0.1  0.1]
   [-0.1 -0.0  0.0]
   [-0.1 -0.1  0.0]
   [-0.1 -0.0  0.0]
   [-0.0  0.0 -0.1]
   [-0.1 -0.1 -0.0]
   [-0.1 -0.0 -0.0]
   [-0.0  0.0 -0.1]
   [-0.0  0.1 -0.1]
   [ 0.1  0.0  0.0]
   [ 0.0  0.0 -0.1]
   [ 0.0  0.0 -0.1]
   [ 0.0  0.0 -0.1]
   [ 0.1  0.0 -0.0]
   [ 0.1  0.0  0.0]
   [ 0.0  0.0  0.1]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.0 -0.0]
   [ 0.1  0.0  0.1]
   [ 0.1  0.0 -0.1]
   [ 0.1  0.0 -0.0]
   [ 0.0 -0.1  0.1]
   [-0.1  0.0  0.0]
   [ 0.1  0.0  0.0]
   [ 0.1 -0.0 -0.0]
   [ 0.0 -0.1  0.1]
   [ 0.0  0.0 -0.1]
   [-0.1 -0.0  0.1]
   [ 0.1  0.0  0.0]
   [ 0.0 -0.0  0.1]
   [ 0.1  0.1  0.1]
   [ 0.0 -0.0  0.1]
   [-0.0 -0.0  0.1]
   [ 0.0 -0.1  0.1]
   [ 0.0  0.0 -0.1]
   [ 0.1 -0.0  0.1]
   [-0.1 -0.1 -0.0]
   [-0.0 -0.0  0.1]
   [ 0.0  0.0 -0.1]
   [ 0.1  0.0  0.0]
   [-0.1  0.0  0.0]
   [-0.1 -0.0 -0.0]
   [-0.1 -0.0  0.0]
   [ 0.1  0.1 -0.1]]
# ---
# name: test_read_oxdna.6
  [[ 9.5e-03  1.7e-02  1.3e-02]
   [ 1.4e-02  4.2e-02  2.6e-02]
   [ 3.8e-02  2.7e-02  1.1e-01]
   [ 1.8e-02 -1.1e-02  5.3e-03]
   [ 3.3e-02 -5.0e-02  1.6e-02]
   [-1.0e-02  2.1e-02  1.1e-02]
   [ 2.7e-03 -1.4e-02 -1.1e-03]
   [-1.0e-02 -6.8e-02  4.5e-03]
   [-1.5e-02  3.7e-02  1.0e-02]
   [-4.7e-03 -9.1e-03 -3.0e-02]
   [ 5.3e-02  2.6e-02 -1.1e-02]
   [ 5.0e-02 -2.7e-02 -2.0e-02]
   [ 3.1e-02  2.5e-02  1.7e-02]
   [ 3.2e-04  1.1e-02 -3.1e-02]
   [ 1.0e-02  2.4e-02  3.0e-03]
   [-5.5e-03 -7.8e-03  2.2e-03]
   [ 3.0e-03  2.6e-02  2.3e-02]
   [-6.1e-03  1.8e-02  1.6e-03]
   [ 1.7e-02  3.8e-02 -1.2e-03]
   [-1.9e-03 -9.6e-04 -1.0e-02]
   [ 1.4e-02  3.0e-02 -3.1e-02]
   [ 5.5e-02  2.7e-02 -1.6e-03]
   [ 4.8e-02 -5.3e-03 -1.5e-02]
   [ 7.9e-04  2.7e-02  2.7e-02]
   [ 5.5e-02  2.7e-02 -1.6e-03]
   [-4.9e-03  1.8e-02  4.4e-05]
   [-2.0e-02  1.3e-02  3.4e-02]
   [ 5.2e-03 -2.5e-02 -9.8e-03]
   [ 3.8e-02  2.9e-02 -1.4e-02]
   [-3.6e-02 -3.1e-03  5.8e-03]
   [ 3.2e-04  1.1e-02 -3.1e-02]
   [ 5.9e-03  1.9e-02  4.2e-02]
   [-6.1e-03  1.8e-02  1.6e-03]
   [-2.2e-02 -1.9e-02  6.9e-02]
   [ 7.2e-02 -3.0e-02 -1.7e-02]
   [-4.9e-03  1.8e-02  4.4e-05]
   [ 3.1e-02  2.5e-02  1.7e-02]
   [ 3.2e-04  1.1e-02 -3.1e-02]
   [-7.3e-02  1.3e-02 -2.1e-02]
   [ 1.9e-03  9.0e-03  3.5e-02]
   [-5.7e-04  3.9e-03 -1.7e-02]
   [ 2.0e-02 -5.2e-02  1.8e-02]
   [ 3.0e-02  1.9e-02 -2.1e-04]
   [ 1.7e-02  5.7e-04  6.4e-02]
   [-2.4e-02 -2.9e-02 -1.2e-02]
   [ 2.2e-02  1.9e-02  6.3e-03]
   [-4.4e-02 -3.5e-02 -5.4e-02]
   [ 5.5e-02  2.7e-02 -1.6e-03]
   [ 1.9e-03  9.0e-03  3.5e-02]
   [-1.3e-02 -1.3e-02 -3.7e-02]
   [ 3.2e-04  1.1e-02 -3.1e-02]
   [ 8.2e-03  4.7e-03 -4.0e-02]
   [ 1.4e-02  3.0e-02 -3.1e-02]
   [-2.3e-02  2.3e-02  1.6e-02]
   [ 3.2e-04  1.1e-02 -3.1e-02]
   [ 8.4e-03 -1.5e-02 -2.7e-02]
   [ 3.8e-02  2.7e-02  1.1e-01]
   [ 2.2e-02  1.5e-02  1.4e-02]
   [ 4.6e-03 -1.7e-02  1.3e-02]
   [ 6.3e-02  3.8e-02  5.4e-02]
   [-3.9e-02 -9.4e-03 -3.1e-02]
   [ 1.7e-02  3.8e-02 -1.2e-03]
   [ 9.9e-03  2.4e-02  1.7e-02]
   [-3.9e-02 -9.4e-03 -3.1e-02]
   [ 2.9e-02  9.3e-04  1.7e-02]
   [ 4.1e-03 -1.6e-02 -4.5e-02]
   [-1.5e-02  3.7e-02  1.0e-02]
   [ 8.4e-03 -1.5e-02 -2.7e-02]
   [-1.6e-02 -5.1e-03  1.2e-02]
   [ 5.9e-03  1.9e-02  4.2e-02]
   [ 6.2e-02  4.2e-03  2.4e-02]
   [-3.6e-02 -3.1e-03  5.8e-03]
   [ 1.7e-02 -3.6e-02 -1.8e-02]
   [-1.8e-03 -3.2e-02  3.8e-03]
   [ 4.8e-02 -5.3e-03 -1.5e-02]
   [-1.5e-02  3.4e-02  4.0e-02]
   [-6.1e-03  1.8e-02  1.6e-03]
   [ 3.1e-02  2.5e-02  1.7e-02]
   [-2.3e-02 -3.0e-02  5.5e-03]
   [-4.4e-02 -3.5e-02 -5.4e-02]
   [-1.1e-02 -1.8e-02 -1.0e-02]
   [ 3.1e-02  2.5e-02  1.7e-02]
   [-2.2e-02 -1.9e-02  6.9e-02]
   [ 2.0e-03  1.5e-02  6.5e-02]
   [-2.4e-02 -2.9e-02 -1.2e-02]
   [-1.9e-03 -9.6e-04 -1.0e-02]
   [ 1.6e-02 -7.0e-03  2.8e-02]
   [ 2.0e-02 -5.2e-02  1.8e-02]
   [-2.1e-02  1.1e-02  4.4e-02]
   [ 3.1e-02  2.5e-02  1.7e-02]
   [-1.6e-02 -5.1e-03  1.2e-02]
   [ 1.0e-02  2.4e-02  3.0e-03]
   [ 1.7e-02  3.8e-02 -1.2e-03]
   [-1.3e-02 -1.3e-02 -3.7e-02]
   [ 3.3e-02 -5.0e-02  1.6e-02]
   [ 1.8e-02 -1.1e-02  5.3e-03]
   [-3.3e-03 -5.2e-02  6.3e-03]
   [-5.4e-04  4.0e-02 -1.4e-02]
   [ 5.5e-02 -3.0e-02 -2.1e-02]
   [ 2.2e-02  1.9e-02  6.3e-03]]
# ---
# name: test_read_oxdna.7
  [[ 0.0  0.3  0.0]
   [-0.1  0.1  0.4]
   [-0.0 -0.5  0.5]
   [-0.2  0.1  0.2]
   [-0.1  0.1  0.3]
   [ 0.0  0.3  0.2]
   [ 0.3 -0.4  0.2]
   [-0.2  0.4  0.0]
   [ 0.1 -0.3  0.0]
   [ 0.7 -0.1  0.5]
   [-0.4 -0.2 -1.1]
   [ 0.2 -0.2  0.0]
   [ 0.1 -0.2  0.0]
   [ 0.1  0.4 -0.4]
   [ 0.2 -0.3  0.4]
   [-0.0 -0.0  0.4]
   [-0.0 -0.2  0.1]
   [ 0.1  0.2  0.2]
   [ 0.0  0.2  0.4]
   [-0.1  0.0  0.2]
   [ 0.5  0.1  0.1]
   [ 0.2 -0.2  0.4]
   [ 0.5 -0.4 -0.2]
   [-0.3  0.6  0.5]
   [ 0.2 -0.2  0.4]
   [-0.6  0.1 -0.1]
   [-0.3  0.0  0.5]
   [ 0.3 -0.4  0.4]
   [-0.2 -0.1 -0.2]
   [-0.3 -0.3 -0.2]
   [ 0.1  0.4 -0.4]
   [ 0.1 -0.2 -0.0]
   [ 0.1  0.2  0.2]
   [ 0.3 -0.2 -0.1]
   [ 0.3 -0.1  0.1]
   [-0.6  0.1 -0.1]
   [ 0.1 -0.2  0.0]
   [ 0.1  0.4 -0.4]
   [ 0.1  0.1  0.5]
   [-0.1  0.4  0.3]
   [-0.5  0.1 -0.1]
   [ 0.4  0.3 -0.4]
   [ 0.2  0.3 -0.0]
   [ 0.4 -0.3  0.0]
   [-0.3  0.7  0.1]
   [ 0.5 -0.0 -0.2]
   [ 0.0 -0.0  0.7]
   [ 0.2 -0.2  0.4]
   [-0.1  0.4  0.3]
   [ 0.0 -0.1 -0.7]
   [ 0.1  0.4 -0.4]
   [ 0.3  0.1  0.6]
   [ 0.5  0.1  0.1]
   [-0.1 -0.1  0.2]
   [ 0.1  0.4 -0.4]
   [-0.6  0.1 -0.6]
   [-0.0 -0.5  0.5]
   [ 0.2 -0.1  0.4]
   [ 0.0  0.5 -0.1]
   [-0.4  0.1  0.0]
   [ 0.1 -0.4 -0.1]
   [ 0.0  0.2  0.4]
   [ 0.1  0.2  0.7]
   [ 0.1 -0.4 -0.1]
   [-0.3 -0.0 -0.3]
   [ 0.1 -0.5  0.2]
   [ 0.1 -0.3  0.0]
   [-0.6  0.1 -0.6]
   [-0.3  0.5  0.1]
   [ 0.1 -0.2 -0.0]
   [ 0.1  0.8 -0.3]
   [-0.3 -0.3 -0.2]
   [-0.8  0.6 -0.2]
   [ 0.1  0.1  0.2]
   [ 0.5 -0.4 -0.2]
   [-0.0  0.1 -0.2]
   [ 0.1  0.2  0.2]
   [ 0.1 -0.2  0.0]
   [-0.2 -0.4  0.1]
   [ 0.0 -0.0  0.7]
   [-0.1  0.2  0.2]
   [ 0.1 -0.2  0.0]
   [ 0.3 -0.2 -0.1]
   [ 0.2  0.0  0.1]
   [-0.3  0.7  0.1]
   [-0.1  0.0  0.2]
   [-0.3 -0.4 -0.3]
   [ 0.4  0.3 -0.4]
   [-0.3  0.0 -0.0]
   [ 0.1 -0.2  0.0]
   [-0.3  0.5  0.1]
   [ 0.2 -0.3  0.4]
   [ 0.0  0.2  0.4]
   [ 0.0 -0.1 -0.7]
   [-0.1  0.1  0.3]
   [-0.2  0.1  0.2]
   [ 0.3 -0.0 -0.3]
   [-0.0 -0.3 -0.1]
   [ 0.0 -0.6  0.4]
   [ 0.5 -0.0 -0.2]]
# ---
# name: test_read_oxdna.8
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.9
  [[ 39  40]
   [550 556]
   [378 384]
   [ 75  81]
   [  0   6]
   [247 253]
   [495 501]
   [326 327]
   [352 358]
   [ 14  20]
   [331 337]
   [473 479]
   [153 154]
   [409 410]
   [538 539]
   [540 541]
   [ 66  67]
   [143 138]
   [569 564]
   [426 432]
   [ 54  55]
   [431 426]
   [365 371]
   [ 64  65]
   [303 304]
   [401 396]
   [260 261]
   [558 564]
   [151 152]
   [374 380]
   [ 73  74]
   [ 58  64]
   [159 160]
   [300 301]
   [568 574]
   [144 145]
   [490 491]
   [467 462]
   [ 98 104]
   [302 303]
   [249 250]
   [442 443]
   [351 357]
   [293 288]
   [118 119]
   [ 57  58]
   [460 461]
   [511 512]
   [155 150]
   [113 108]
   [271 277]
   [447 453]
   [149 144]
   [339 340]
   [532 538]
   [204 205]
   [151 157]
   [177 178]
   [505 506]
   [ 25  31]
   [134 135]
   [160 166]
   [ 79  85]
   [329 335]
   [578 579]
   [369 375]
   [329 324]
   [334 335]
   [516 517]
   [359 354]
   [350 356]
   [138 144]
   [467 473]
   [ 35  41]
   [233 239]
   [428 429]
   [376 377]
   [ 70  71]
   [510 516]
   [250 251]
   [ 56  57]
   [570 576]
   [457 463]
   [340 341]
   [ 30  31]
   [494 495]
   [435 436]
   [501 507]
   [339 345]
   [399 400]
   [ 49  50]
   [141 142]
   [432 438]
   [511 517]
   [580 586]
   [196 202]
   [ 97 103]
   [537 538]
   [126 127]
   [262 263]]
# ---
